# c-ext-example-pycairo

./: .gitignore  README.md  meson.build
manim_renderer/: hello.c  meson.build
subprojects/: pycairo.wrap
